Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25502

rpl.rpl_perfschema_applier_status_by_worker failed in bb with: Test assertion failed

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.6(EOL)
    • 10.6.1
    • Tests, MTR
    • None

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-deb-groovy-ppc64le/builds/643/steps/mtr/logs/stdio

      10.6 bfc0110b9b4d8ed49

      rpl.rpl_perfschema_applier_status_by_worker 'mix' w1 [ fail ]
              Test ended at 2021-04-22 17:54:51
       
      CURRENT_TEST: rpl.rpl_perfschema_applier_status_by_worker
      mysqltest: In included file "./include/assert.inc": 
      included from /usr/share/mysql/mysql-test/suite/rpl/t/rpl_perfschema_applier_status_by_worker.test at line 98:
      At line 168: Test assertion failed in assertion.inc
       
      The result from queries just before the failure was:
      < snip >
       
      **** SHOW BINLOG EVENTS on server_1 ****
      binlog_name = 'master-bin.000001'
      SHOW BINLOG EVENTS IN 'master-bin.000001';
      Log_name	Pos	Event_type	Server_id	End_log_pos	Info
      master-bin.000001	4	Format_desc	1	256	Server ver: 10.6.0-MariaDB-1:10.6.0+maria~groovy-log, Binlog ver: 4
      master-bin.000001	256	Gtid_list	1	285	[]
      master-bin.000001	285	Binlog_checkpoint	1	329	master-bin.000001
      master-bin.000001	329	Gtid	1	371	GTID 0-1-1
      master-bin.000001	371	Query	1	461	use `test`; CREATE TABLE t1 (a INT)
       
      **** SHOW RELAYLOG EVENTS on server_1 ****
      relaylog_name = 'No such row'
      SHOW RELAYLOG EVENTS IN 'No such row';
      Log_name	Pos	Event_type	Server_id	End_log_pos	Info
      connection slave;
      Assertion text: 'Last_Seen_Transaction should show .'
      Assertion condition: '"0-1-1" = ""'
      Assertion condition, interpolated: '"0-1-1" = ""'
      Assertion result: '0'
       
      More results from queries before failure can be found in /dev/shm/var/1/log/rpl_perfschema_applier_status_by_worker.log
      
      

      Attachments

        Issue Links

          Activity

            People

              sujatha.sivakumar Sujatha Sivakumar (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 0.75h
                  1d 0.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.